修改了appbar的色调，调整了默认字体

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,4 @@
-$body-font-family: 'Work Sans', serif;
+$body-font-family: -apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen,cantarell,helvetica neue,ubuntu,sans-serif;
 $grid-breakpoints: (
         'xs': 0,
         'sm': 600px,
